--- a/terminate_ec2_intance.yml
+++ b/terminate_ec2_intance.yml
@@ -4,7 +4,7 @@
     name: ansible
     region: us-east-2
     instance_ids:
-        - 'i-04036375f48b8841f'
+        - 'i-0d7b86c0c08fef8f7'
   tasks:
     - name: Terminate instances that were previously launched
       ec2:
@@ -13,6 +13,6 @@
         instance_ids: '{{ instance_ids }}'
     - name: Remove ansible security group
       ec2_group:
-        name: "{{ region }}"
+        name: "{{ name }}"
         region: "{{ region }}"
         state: absent
